--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,7 @@
 <resources>
-    <string name="app_name">Dzpoker</string>
+    <string name="app_name">指尖德州</string>
+    <!-- 单位:毫秒 -->
+    <integer name="welcome_page_show_time">2000</integer>
 
     <string name="dummy_button">Dummy Button</string>
     <string name="dummy_content">DUMMY\nCONTENT</string>
