1、修复我的页面的UI 2、俱乐部获取申请加入俱乐部的消息 3、增加俱乐部管理页面

--- a/BaseLib/src/main/res/values/strings.xml
+++ b/BaseLib/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">BaseLib</string>
+
+    <string name="default_progressbar">Default Progressbar:</string>
 </resources>
